# rslides

./: Cargo.toml  build.rs
src/: app.rs  main.rs  ui.rs
src/state/: mod.rs  slideshow_config_page_state.rs  slideshow_page_state.rs
src/utils/: handle_slideshow.rs  image_loader.rs  media_loader.rs  mod.rs  open_folder.rs
src/widgets/: header.rs  mod.rs  slide_viewer.rs  slideshow_config_page.rs  slideshow_page.rs
