[package]
name = "RSlides"
version = "0.1.0"
edition = "2024"
build = "build.rs"


[dependencies]
iced = { version = "0.14.0", features = ["image", "smol"] }
iced_aw = "0.13.1"
iced_font_awesome = "0.4.2"
nfd2 = "0.3.1"
image = "0.25.10"
iced_video_player = "0.6.0"
smol = "2.0"
rand = "0.10.0"
url = "2.5.8"

[package.metadata.packager]
name = "YourApp"
identifier = "com.cynestal.rslides"
resources = [
    { src = "./target/release/*.dll", target = "" }
]
before-packaging-command = "cargo build --release"
out-dir = "./target/dist"
